k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-cd
  labels:
    app: ci-cd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ci-cd
  template:
    metadata:
      labels:
        app: ci-cd
    spec:
      containers:
        - name: ci-cd
          image: gcr.io/anoriqq-ci-cd/ci-cd:latest
          ports:
          - containerPort: 8080
          resources:
            limits:
              memory: 128Mi
              cpu: 500m
