k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-cd
spec:
  type: NodePort
  selector:
    app: ci-cd
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
